--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ button{
 	font-family:comic;
 	font-size:20px;
 	border: 4px solid red;
+	border-radius:20px;
 	
 	position:absolute;
 	top:590px;
@@ -59,7 +60,20 @@ button{
 	
 }
 
-  .navigation{
+  nav{
+	flex:1;
+	text-align: right;
 	background-color:white;
 	color:blue;
+  }
+  
+  nav ul li{
+	  list-style: none;
+	  display:inline-block;
+	  margin-left:60px;
+  }
+  
+  nav ul li a{
+	  text-decoration:none;
+	  
   }
