--- a/style.css
+++ b/style.css
@@ -1,79 +1,111 @@
+
 body{
+	margin:0px;
+	padding:0px;
 	font-family:papyrus;
 	font-size:20px;
 	color:red;
-	background-color:skyblue;	
+	background-color:rgb(205 255 255);	
+	display:flex;
+	flex-direction:column;
+	position:absolute;
+	width:100%;
+
+}
+h1{
+	align-items:center;
+	font-family:papyrus;
+	font-size:50px;	
+	margin:5px 0 0 0;
+	background-color:aliceblue;
+	/*margin:0 0 2px 0 ;*/
+	border:1px red solid;
 	
 }
 
-h1{
-	font-family:papyrus;
-	font-size:60px;
-	padding:0 0 0 150px;
-	margin:auto;
-	position:absolute;
-	right:500px;
-	top:150px;
-}
-
 h3{
-	font-size:40px;
+	font-size:30px;
 	font-family:comic;
-	color:coral;
-	padding:0 0 0 250px;
-	margin:0 0 0 0;
-	position:absolute;
-	right:405px;
-	top:90px;
-	border: 2px solid red;
-	width:700px;
-	text-align:center;
+	color:blue;
+	/*padding:0 0 0 250px;*/
+	margin:auto;
+	/*position:static;
+	right:310px;
+	top:220px;*/
+	/*border: 2px solid aquamarine;*/
+	align-items:center;
+	/*text-align:center;*/
 	padding:10px 10px 10px 10px;
-	background-color: rgba(0,0,0,.1);
+	
 	}
+	
+	.title{
+	text-align:center;
+	display:block;
+	 color: coral;	
+	/*border:3px coral solid;*/
+	/*background-color:;*/
+	/*border-radius:5px;*/
+	margin-left:250px;
+	width:50%;
+	margin-top:5px	;
+		}
+	
 	
 
 
 button{
+	align-items:center;
 	color:blue;
 	text-align:center;
 	font-family:comic;
 	font-size:20px;
-	border: 4px solid red;
+	border: 2px solid red;
 	border-radius:20px;
-	
-	position:absolute;
-	top:590px;
-	left:500px;
-	width:240px;
+	cursor:pointer;
+	bottom:15%;
+	right:40%;
+	width:20%;	
 	padding:10px 10px 10px 10px;
 	background-color: rgba(0,0,0,.3);	
+	margin-left:500px;
+	position:absolute;
 	        
 }
 
   img{
 	height:auto;
-	width:800px;
-	padding-left:180px;
-	padding-top:0px;
-	max-width:100%;
+	width:55%;	
+	 padding:0px 250px;	
+	 margin:0px 10px;	
+	 background-position:center;
+	
 	
 }
 
+
+
+
   nav{
-	flex:1;
-	text-align: right;
-	background-color:white;
-	color:blue;
+  	text-align:center-right;
+	background-color:aqua;
+	padding:5px;
+	width:1500px;
+
   }
   
   nav ul li{
 	  list-style: none;
 	  display:inline-block;
-	  margin-left:60px;
-  }
+	  margin-left:50px;
+	 	}
   
   nav ul li a{
 	  text-decoration:none;
+	   font-family:comic;
+	   color:coral
+	  
 	  
   }
+  
+  
