--- a/page2.css
+++ b/page2.css
@@ -45,8 +45,8 @@
 	 background-image:url("tortoisewins.png");
 	 
 }
-  .card2{
-	   background-image:url("tortoise.png");
+  .home{
+	   background-image:url("nature.jpg");
   }
   
   img{
@@ -55,3 +55,29 @@
 	
 	  
 	  }
+	   nav{
+  	text-align:center-right;
+	background-color:aliceblue;
+	padding:5px;
+	width:1500px;
+
+  }
+  
+  nav ul li{
+	  list-style: none;
+	  display:inline-block;
+	  margin-left:50px;
+	 	}
+  
+  nav ul li a{
+	  text-decoration:none;
+	   font-family:comic;
+	   color:coral
+	  
+	  
+  }
+   .sign{
+		color:red;
+		font-family:papyrus;
+		text-align:center;
+		  }
