--- a/page3.css
+++ b/page3.css
@@ -1,7 +1,6 @@
 
 .row{
 	display:flex;
-	/*height:100%;*/
 	align-items:center;
 	}
  
@@ -13,8 +12,7 @@
 	 margin-left: 3em;
 	 font-family:papyrus;
 	 background-color: aquamarine;
-	border:3px white solid;
-	/*padding:5px;*/
+	border:3px yellow solid;
 	border-radius:10px;
 	margin:10px;
  }
@@ -29,15 +27,7 @@
  }
  
  
-/*h2{
-	text-align:center;
-}
- p{
-	 display:block;
-	 color: coral;
-	 margin-left: 3em;
-	 font-family:calibre
- }*/
+
  .card{
 	 width:200px;
 	 height:230px;
@@ -49,13 +39,13 @@
 	 margin:40px 15px;	
 	 background-position:center;
 	 background-size:cover;
-	 border:3px white solid;
+	 border:3px yellow solid;
  }
-.card1{
+  .fight{
 	 background-image:url("fight.png");	 
 }
-  .card2{
-	   background-image:url("tortoise.png");
+  .home{
+	   background-image:url("nature.jpg");
   }
   
   img{
@@ -64,3 +54,29 @@
 	
 	  
 	  }
+	   nav{
+  	text-align:center-right;
+	background-color:aliceblue;
+	padding:5px;
+	width:1500px;
+
+  }
+  
+  nav ul li{
+	  list-style: none;
+	  display:inline-block;
+	  margin-left:50px;
+	 	}
+  
+  nav ul li a{
+	  text-decoration:none;
+	   font-family:comic;
+	   color:coral
+	  
+	  
+  }
+   .sign{
+		color:red;
+		font-family:papyrus;
+		text-align:center;
+		  }
