--- a/page4.css
+++ b/page4.css
@@ -1,7 +1,6 @@
 
 .row{
 	display:flex;
-	/*height:100%;*/
 	align-items:center;
 	}
  
@@ -14,7 +13,6 @@
 	 font-family:papyrus;
 	 background-color: aquamarine;
 	border:3px white solid;
-	/*padding:5px;*/
 	border-radius:10px;
 	margin:10px;
  }
@@ -29,7 +27,7 @@
  }
  
  
- .card{
+	.card{
 	 width:200px;
 	 height:230px;
 	 display:block-inline;
@@ -42,16 +40,45 @@
 	 background-size:cover;
 	 border:3px white solid;
  }
-.card1{
+	.tortoisewins{
 	 background-image:url("tortoisewins.png");	 
 }
-  .card2{
-	   background-image:url("tortoise.png");
+	.home{
+	   background-image:url("nature.jpg");
+	}
   
   
-  img{
+   img{
 	
 	 width:105%;
 	
+   }
 	  
-	  }
+
+	  nav{
+  	text-align:center-right;
+	background-color:aliceblue;
+	padding:5px;
+	width:1500px;
+
+  }
+  
+  nav ul li{
+	  list-style: none;
+	  display:inline-block;
+	  margin-left:50px;
+	 	}
+  
+  nav ul li a{
+	  text-decoration:none;
+	   font-family:comic;
+	   color:coral
+	  
+	  
+  }
+  
+   .sign{
+		color:red;
+		font-family:papyrus;
+		text-align:center;
+		  }
