--- a/style.css
+++ b/style.css
@@ -16,81 +16,63 @@ h1{
 	align-items:center;
 	font-family:papyrus;
 	font-size:50px;	
-	margin:5px 0 0 0;
+	margin:0 0 0 10px;
 	background-color:aliceblue;
-	/*margin:0 0 2px 0 ;*/
-	border:1px red solid;
-	
+
 }
 
 h3{
 	font-size:30px;
 	font-family:comic;
-	color:blue;
-	/*padding:0 0 0 250px;*/
-	margin:auto;
-	/*position:static;
-	right:310px;
-	top:220px;*/
-	/*border: 2px solid aquamarine;*/
+	color:darkblue;
+	margin:auto;	
 	align-items:center;
-	/*text-align:center;*/
 	padding:10px 10px 10px 10px;
 	
 	}
 	
 	.title{
 	text-align:center;
+  	align-items:center;
+
 	display:block;
 	 color: coral;	
-	/*border:3px coral solid;*/
-	/*background-color:;*/
-	/*border-radius:5px;*/
-	margin-left:250px;
-	width:50%;
-	margin-top:5px	;
+	margin-top:5px;
 		}
 	
 	
-
+  img{
+      
+	height:auto;
+    align-items:center;
+    display: block;
+    margin: auto;
+}
 
 button{
 	align-items:center;
-	color:blue;
+	color:darkblue;
 	text-align:center;
 	font-family:comic;
 	font-size:20px;
-	border: 2px solid red;
+	border: 2px solid white;
 	border-radius:20px;
 	cursor:pointer;
-	bottom:15%;
+	bottom:13%;
 	right:40%;
-	width:20%;	
+	width:15%;	
 	padding:10px 10px 10px 10px;
 	background-color: rgba(0,0,0,.3);	
-	margin-left:500px;
 	position:absolute;
 	        
 }
-
-  img{
-	height:auto;
-	width:55%;	
-	 padding:0px 250px;	
-	 margin:0px 10px;	
-	 background-position:center;
-	
-	
-}
-
-
 
 
   nav{
   	text-align:center-right;
 	background-color:aqua;
 	padding:5px;
-	width:1500px;
+	width:100%;
 
   }
   
@@ -108,4 +90,9 @@ button{
 	  
   }
   
-  
+    .sign{
+		color:red;
+		font-family:papyrus;
+		text-align:center;
+		
+}
